--- a/embed4.html
+++ b/embed4.html
@@ -572,6 +572,6 @@ setNowBtn.addEventListener('click', onSetNow)
 dateInput.addEventListener('change', ()=> renderAll())
 
 /* End of script */
-</script>
+<script src="study_tracker.js"></script>
 </body>
 </html>
