--- a/embed4.html
+++ b/embed4.html
@@ -588,7 +588,7 @@ setNowBtn.addEventListener('click', onSetNow)
 dateInput.addEventListener('change', ()=> renderAll())
 
 /* End of script */
-<script src="study_tracker.js"></script>
+</script>
 </body>
 </html>
 
