Add script tag for study_tracker.js

--- a/embed4.html
+++ b/embed4.html
@@ -589,6 +589,7 @@ dateInput.addEventListener('change', ()=> renderAll())
 
 /* End of script */
 </script>
+  <script src="study_tracker.js"></script>
 </body>
 </html>
 
