--- a/embed4.html
+++ b/embed4.html
@@ -9,8 +9,15 @@
 </style>
 
 <script type="module">
-/* supabase client が既に window.supabase にあることを前提。
-   もしない場合は最上部で createClient するコードを追加してください。 */
+import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+
+const SUPABASE_URL = 'https://pscowkpzgomszpvjtnge.supabase.co'
+const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBzY293a3B6Z29tc3pwdmp0bmdlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA0MjIwNTUsImV4cCI6MjA3NTk5ODA1NX0.CVRZM4e-vXxGWzLCK6aOIANJjQ0NpVwSuTfTeQbvQg0'
+
+// Supabaseクライアントを作成（これでログイン情報を読み取れるようになります）
+const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
+window.supabase = supabase 
+// ▲▲▲ ここまで追加・修正 ▲▲▲
 
 const TARGET_ORIGIN = location.origin || '*'
 
