--- a/embed7.html
+++ b/embed7.html
@@ -64,7 +64,7 @@
       </div>
       <div class="stat-card" style="background:linear-gradient(135deg,#4facfe,#00f2fe)">
         <div class="stat-value" id="myRank">-</div>
-        <div class="stat-label">クラス順位</div>
+        <div class="stat-label">学年順位</div>
       </div>
       <div class="stat-card" style="background:linear-gradient(135deg,#43e97b,#38f9d7)">
         <div class="stat-value" id="activeToday">0</div>
